--- a/src/CSharp2CIL/CSharp2CIL.csproj
+++ b/src/CSharp2CIL/CSharp2CIL.csproj
@@ -89,8 +89,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CilModels.cs" />
+    <Compile Include="Models\CSharpMethod.cs" />
+    <Compile Include="Models\CSharpType.cs" />
+    <Compile Include="Models\PEBodyLine.cs" />
+    <Compile Include="Models\PEMethod.cs" />
+    <Compile Include="Models\PEType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CSharpService.cs" />
+    <Compile Include="Services\PEService.cs" />
+    <Compile Include="ViewModels\TypeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
